<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/gradient_orange"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >


            <ImageView
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                app:srcCompat="@drawable/ms_logo_white_toluca_purple"
                android:layout_width="match_parent"
                android:layout_height="120dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/prompt_user_email"
                    android:textColorHint="@color/purple"
                    app:hintTextAppearance="@style/AppTheme.TextFloatingLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_login_email"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:textSize="22dp"
                        android:background="@color/transparent"
                        android:drawablePadding="12dp"
                        android:padding="8dp"
                        android:maxLines="1"
                        android:drawableLeft="@drawable/ic_at"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
                <View
                    android:background="@color/white"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/prompt_user_password"
                    android:textColorHint="@color/purple"
                    app:hintTextAppearance="@style/AppTheme.TextFloatingLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_login_password"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:textSize="22dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="12dp"
                        android:padding="8dp"
                        android:maxLines="1"
                        android:drawableLeft="@drawable/ic_lock_outline"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
                <View
                    android:background="@color/white"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

                <Button
                    android:id="@+id/btn_login_login"
                    android:background="@drawable/background_white_round"
                    android:text="@string/button_login"
                    android:textColor="@color/orange"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:clickable="true"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_login_registry"
                    android:background="@drawable/background_purple_round"
                    android:text="@string/button_registry"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:clickable="true"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_login_about"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:text="@string/popup_title_about"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="16dp"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>