<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistryActivity" >

    <FrameLayout
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbr_main"
            android:background="@color/white"
            app:logo="@drawable/ms_logo_orange_toluca_purple_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </FrameLayout>

    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/prompt_user_email"
                app:hintTextAppearance="@style/AppTheme.TextFloatingLabel"
                android:textColorHint="@color/orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_registry_email"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:textSize="22dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_at"
                    android:drawableTint="@color/orange"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:background="@color/purple"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/prompt_user_name"
                app:hintTextAppearance="@style/AppTheme.TextFloatingLabel"
                android:textColorHint="@color/orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_registry_name"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:textSize="22dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_face"
                    android:drawableTint="@color/orange"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:background="@color/purple"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="1dp" />



            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/prompt_user_date_birth"
                app:hintTextAppearance="@style/AppTheme.TextFloatingLabel"
                android:textColorHint="@color/orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <!-- -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_registry_date_birth"
                    android:editable="false"
                    android:inputType="none"
                    android:ems="10"
                    android:textSize="22dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_date_range"
                    android:drawableTint="@color/orange"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:background="@color/purple"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/prompt_user_password"
                android:textColorHint="@color/orange"
                app:hintTextAppearance="@style/AppTheme.TextFloatingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_registry_password"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:textSize="22dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_lock_outline"
                    android:drawableTint="@color/orange"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:background="@color/purple"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/prompt_user_password_verify"
                android:textColorHint="@color/orange"
                app:hintTextAppearance="@style/AppTheme.TextFloatingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_registry_password_verify"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:textSize="22dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawableTint="@color/orange"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:background="@color/purple"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/btn_registry_registry"
                android:background="@drawable/background_purple_round"
                android:text="@string/button_registry"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:padding="10dp"
                android:clickable="true"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_registry_about"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:text="@string/popup_title_about"
                android:textColor="@color/purple"
                android:textAllCaps="false"
                android:textSize="16dp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@drawable/shadow_bottom"
        android:layout_width="match_parent"
        android:layout_height="4dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>