<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/prompt_user_email"
                app:hintTextAppearance="@style/AppTheme.TextFloatingLabel"
                android:textColorHint="@color/orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_profile_email"
                    android:editable="false"
                    android:inputType="none"
                    android:ems="10"
                    android:textSize="22dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_at"
                    android:drawableTint="@color/purple"
                    android:drawableRight="@drawable/ic_mode_edit"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:background="@color/purple"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/prompt_user_name"
                app:hintTextAppearance="@style/AppTheme.TextFloatingLabel"
                android:textColorHint="@color/orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_profile_name"
                    android:editable="false"
                    android:inputType="none"
                    android:ems="10"
                    android:textSize="22dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_face"
                    android:drawableTint="@color/purple"
                    android:drawableRight="@drawable/ic_mode_edit"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:background="@color/purple"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="1dp" />



            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/prompt_user_date_birth"
                app:hintTextAppearance="@style/AppTheme.TextFloatingLabel"
                android:textColorHint="@color/orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <!-- -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_profile_date_birth"
                    android:editable="false"
                    android:inputType="none"
                    android:ems="10"
                    android:textSize="22dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_date_range"
                    android:drawableTint="@color/purple"
                    android:drawableRight="@drawable/ic_mode_edit"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:background="@color/purple"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/prompt_user_password"
                android:textColorHint="@color/orange"
                app:hintTextAppearance="@style/AppTheme.TextFloatingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_profile_password"
                    android:editable="false"
                    android:inputType="none"
                    android:ems="10"
                    android:textSize="22dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_lock_outline"
                    android:drawableTint="@color/purple"
                    android:drawableRight="@drawable/ic_mode_edit"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:background="@color/purple"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_marginTop="0dp"
        android:background="@drawable/shadow_bottom"
        android:layout_width="match_parent"
        android:layout_height="4dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>